# Binance-BOT

./: order bot guide v2.txt  order bot v4.txt  pyproject.toml  things to check.txt
trading_bot/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
trading_bot/config/: config.yaml  config_loader.py
trading_bot/core/: events.py  types.py
trading_bot/modules/exchange/: base.py  ccxt_connector.py  simulated.py
trading_bot/modules/execution/: base.py  iceberg.py  market_order.py
trading_bot/modules/risk/: base.py  position_limits.py
trading_bot/modules/strategy/: base.py  combined.py  detector_driven.py
trading_bot/monitoring/: prometheus.yml
trading_bot/monitoring/grafana/provisioning/dashboards/: bot_dashboard_provider.yml  sample_bot_dashboard.json
trading_bot/monitoring/grafana/provisioning/datasources/: prometheus_ds.yml
trading_bot/tests/: test_main_app_issues.py  test_strategy.py
trading_bot/utils/: logger.py  metrics.py  resilience.py
