[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "1.0.0"
description = "Modular cryptocurrency trading bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0", # Corrected from numpy>=1.24.9 as 1.24.0 is more likely
    "pyyaml>=6.0", # Corrected from pyyaml>=6.8 as 6.0 is more common
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "prometheus-client>=0.18.0",
    "tenacity>=8.2.0",
    "pybreaker>=1.0.0",
    "aiohttp>=3.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "click>=8.0.0",
]

[project.scripts]
trading-bot = "trading_bot.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["trading_bot"]
fail_under = 80
